--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-27 12:34:25
+lastsearch = 2024-07-27 15:18:40
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = -220.0%%
-title = Dookki Vietnam - 🍴Buffet Tokbokki siêu HOT khu D2 Bình...
-url = https://www.facebook.com/DookkiVietnam/posts/buffet-tokbokki-siêu-hot-khu-d2-bình-thạnh-dookki-buffet-139-141-nguyễn-gia-trí-/2301597160110405/
+match = -86.7%%
+title = PHOTOTIMEVietnam | Ho Chi Minh City
+url = https://www.facebook.com/phototimevn/
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -77,9 +77,9 @@ title = Khẩu, tuýp 1/4 đầu lắc léo hệ mét 12 cạnh hãng Genius
 url = http://geniustools.vn/khau-560/dau-lac-leo-1-4-he-met-12-canh-682
 
 [dochoimamnon123.com]
-match = -240.0%%
-title = D2 Cột Bóng rổ, Hầm chui, Vận động-Thể chất - Đồ chơi Bắc Hà
-url = https://dochoimamnon123.com/d2-cot-bong-ro-ham-chui-van-dong-the-chat
+match = -113.3%%
+title = Bộ vận động 12 chi tiết - Đồ chơi Bắc Hà
+url = https://dochoimamnon123.com/bo-van-dong-12-chi-tiet
 
 [m.facebook.com]
 match = -113.3%%
