--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-27 14:36:10
+lastsearch = 2024-07-27 15:24:27
 
 [burningman.org]
 match = -60.0%%
@@ -12,9 +12,9 @@ title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
-match = -66.7%%
-title = OLLIE 1- POINT TO THE TABLE- TRANG 10
-url = https://www.youtube.com/watch?v=2YbcRGD-gIg
+match = 0.0%%
+title = Primitive Technology
+url = https://www.youtube.com/@primitivetechnology9550
 
 [www.hcso.org]
 match = 7.7%%
