--- a/images/man-ren-12/config.ini
+++ b/images/man-ren-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-ren-12.html
 lastopen = 2024-06-07 00:50:53
 
 [search]
-lastsearch = 2024-07-27 13:46:41
+lastsearch = 2024-07-27 15:19:01
 
 [www.ncbi.nlm.nih.gov]
-match = -380.0%%
-title = Heterologous spinal cord transplantation in man - PMC
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8247691/
+match = -410.0%%
+title = The Effect of Acupressure at PC6 and REN12 on Vomiting ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6542397/
 
 [www.healthline.com]
 match = 0.0%%
@@ -37,9 +37,9 @@ title = The Clinical Application of Zhongwan REN-12
 url = https://www.journalofchinesemedicine.com/the-clinical-application-of-zhongwan-ren12.html
 
 [en.wikipedia.org]
-match = 0.0%%
-title = Zhenren
-url = https://en.wikipedia.org/wiki/Zhenren
+match = -120.0%%
+title = List of acupuncture points
+url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [www.pinterest.com]
 match = -310.0%%
