--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-07-27 13:47:47
+lastsearch = 2024-07-27 15:15:58
 
 [www.mantubung.com]
-match = -138.9%%
-title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
-url = https://www.mantubung.com/
+match = -100.0%%
+title = Màn trẻ em tự bung chống muỗi đa năng 80cm * 100cm
+url = https://www.mantubung.com/man-tre-em-tu-bung-chong-muoi-da-nang-84845.html
 
 [manbinhminh.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Màn chống muỗi cho bé gấp gọn dễ dàng bao quản, mùng ...
 url = https://manbinhminh.com/2509/man-chong-muoi-cho-be-gap-gon-de-dang-bao-quan-mung-chup-tu-bung.aspx
 
 [shopee.vn]
-match = -100.0%%
-title = Màn chụp tự bung cho bé ⚡LOẠI 1⚡ Mùng chụp ngủ tự ...
-url = https://shopee.vn/Màn-chụp-tự-bung-cho-bé-⚡LOẠI-1⚡-Mùng-chụp-ngủ-tự-bung-xếp-chống-muỗi-cho-bé-nhỏ-lớn-trẻ-em-sơ-sinh-i.236260085.10218972280
+match = -127.8%%
+title = Màn chụp cho bé - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
+url = https://shopee.vn/list/màn chụp/cho bé
 
 [h5.lazada.vn]
 match = -33.3%%
@@ -37,9 +37,9 @@ title = Màn chụp tự bung cho bé – Những quy tắc sử dụng an ...
 url = https://manthutrang.com/blogs/news/man-chup-tu-bung-cho-be-nhung-quy-tac-su-dung-an-toan-cha-me-can-biet
 
 [easydream.vn]
-match = -105.6%%
-title = Mùng Chụp Tự Bung -Màn chụp tự bung [16] - easy dream
-url = https://easydream.vn/mung-chup-tu-bung-man-chup-tu-bung-3-11.html
+match = -61.1%%
+title = mùng chụp tự bung gấp gọn cao cấp easy dream
+url = https://easydream.vn/mung-chup-tu-bung-gap-gon-cao-cap-easy-dream-134-15.html
 
 [www.mungtubung.com]
 match = -116.7%%
@@ -47,9 +47,9 @@ title = Mùng Tự Bung Bảo Lộc 1m8 x 2m Loại 2 Cửa Cao Cấp ...
 url = https://www.mungtubung.com/mung-tu-bung-1m8-loai-2-cua.html
 
 [mungmocmien.com]
-match = -11.1%%
-title = Màn chụp em bé VIỀN CHÂN HỒNG
-url = https://mungmocmien.com/products/man-chup-tu-bung-man-chup-em-be-vien-chan-hong
+match = -94.4%%
+title = Mùng Chụp Tự Bung Đỉnh Rộng Cao Cấp Mộc Miên XL20
+url = https://mungmocmien.com/products/mung-man-chup-tu-bung-dinh-rong-cao-cap-3-cua-3
 
 [tiki.vn]
 match = -11.1%%
@@ -62,9 +62,9 @@ title = Mùng Tự Bung Cho Bé 70cm x 90Cm
 url = https://mungchup.com/mung-thuyen-tu-bung-cho-be-67008.html
 
 [munghoangphat.com]
-match = -44.4%%
-title = Mùng chụp tự bung trẻ em cao cấp HOÀNG PHÁT
-url = https://munghoangphat.com/mung-chup-tu-bung-tre-em-cao-cap.html
+match = -88.9%%
+title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
+url = https://munghoangphat.com/
 
 [ichikobaby.com]
 match = -88.9%%
