--- a/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
+++ b/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-dreamland-uc-160x200x10-xuat-khau.html
 lastopen = 2024-06-07 00:26:46
 
 [search]
-lastsearch = 2024-07-27 09:35:38
+lastsearch = 2024-07-27 15:26:12
 
 [demdreamland.vn]
 match = 25.6%%
@@ -13,8 +13,8 @@ url = https://demdreamland.vn/dem-cao-su-nhap-khau-dreamland-natural-latex/
 
 [demxanh.com]
 match = 18.6%%
-title = Đệm cao su Kim Cương xuất khẩu PRINCESS GOLD áo gấm
-url = https://demxanh.com/dem-cao-su-kim-cuong-xuat-khau-princess-gold.html
+title = Đệm cao su Kim Cương xuất khẩu Diamond Massage trắng
+url = https://demxanh.com/dem-cao-su-kim-cuong-xuat-khau-happy-massage.html
 
 [www.diepxuan.com]
 match = -277.8%%
