--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-07-27 13:48:27
+lastsearch = 2024-07-27 16:15:13
 
 [www.muji.com]
 match = 7.1%%
@@ -62,9 +62,9 @@ title = Mua Chăn Lông tuyết Muji siêu mềm mịn cao cấp 1,8kg
 url = https://tiki.vn/chan-long-tuyet-muji-sieu-mem-min-cao-cap-1-8kg-p157163129.html
 
 [www.muji.us]
-match = -78.6%%
-title = Women's Loungewear | Cozy Pajamas
-url = https://www.muji.us/collections/womens-loungewear?srsltid=AfmBOorB1Q7zMZ93VjD0tqRUTJgzoo2zupjUCwyYDKFrSHRtYoUfe18T
+match = -7.1%%
+title = Tableware | Home
+url = https://www.muji.us/collections/tableware?srsltid=AfmBOoqbuz0LD7Ow65OmTjwnOfU-qtfyy845cX6N5yTfccb9UOHeGYXk
 
 [xachtaynhat.com.vn]
 match = -35.7%%
@@ -104,7 +104,7 @@ url = https://www.tiktok.com/discover/muji-pickling-rice-bran
 [www.lazada.vn]
 match = -62.5%%
 title = Untitled
-url = https://www.lazada.vn/tag/chan-long-muji/
+url = https://www.lazada.vn/tag/chan-long-muji/?srsltid=AfmBOoqEhUrsl9h5GszfepstsOw1-W_2oFs5tueY3dnQFdf__ja68NKz
 
 [sugoimart.com]
 match = -257.1%%
