--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-27 12:45:09
+lastsearch = 2024-07-27 16:27:55
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -22,9 +22,9 @@ title = Quantitative Analysis of Colistin-Resistant Escherichia coli ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7910070/
 
 [thuvienphapluat.vn]
-match = -73.9%%
-title = Nghị quyết 10/2022/NQ-HĐND định mức phân bổ vốn xây ...
-url = https://thuvienphapluat.vn/van-ban/Tai-chinh-nha-nuoc/Nghi-quyet-10-2022-NQ-HDND-dinh-muc-phan-bo-von-xay-dung-nong-thon-moi-Thai-Binh-2021-2025-527751.aspx
+match = -82.6%%
+title = Chỉ thị 10/CT-UBND 2021 chấn chỉnh tăng cường quản lý ...
+url = https://thuvienphapluat.vn/van-ban/Bat-dong-san/Chi-thi-10-CT-UBND-2021-chan-chinh-tang-cuong-quan-ly-nha-nuoc-ve-dat-dai-tinh-Thai-Binh-483501.aspx
 
 [sotuphap.thaibinh.gov.vn]
 match = 17.4%%
