--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-07-27 15:54:10
+lastsearch = 2024-07-27 16:28:57
 
 [demxanh.com]
 match = 0.0%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hoà Sợi Mây Tơ Tằm Mát Lạnh Không Gối ...
 url = https://shopee.vn/Chiếu-Điều-Hoà-Sợi-Mây-Tơ-Tằm-Mát-Lạnh-Không-Gối-Cao-Cấp-Chiếu-Có-Chun-Cài-Góc-Hàng-Loại-1-i.529742790.25073007553
 
 [foreverbedding.net]
-match = 0.0%%
-title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
+match = -59.3%%
+title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 
 [congtynemthangloi.com]
 match = -29.6%%
@@ -145,4 +145,9 @@ url = https://bvhttdl.gov.vn/trung-tam-chieu-phim-quoc-gia-thong-bao-moi-thau-go
 match = -100.0%%
 title = euro 2024 diễn ra khi nào - v2.17.2【For88.Com】 - Meizu App Store
 url = https://sinhvien.ufm.edu.vn/hot47990.html
+
+[chanragoinemngockhue.com]
+match = 70.4%%
+title = CHIẾU ĐIỀU HÒA ( KHÔNG MỀN)
+url = https://chanragoinemngockhue.com/chieu-dieu-hoa-khong-men
 
