--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-07-27 13:46:47
+lastsearch = 2024-07-27 16:22:03
 
 [shopee.vn]
 match = -171.4%%
@@ -17,14 +17,14 @@ title = {NEW2021} Mùng Ngủ METTA Tự Bung Thông Minh - 2 ...
 url = https://mungthienmetta.com/mung-man-ngu-metta-tu-bung/new2021-mung-ngu-metta-tu-bung-thong-minh-2-met-vuong-mngu2m-vuong-xam-bh-18-thang.html
 
 [tiki.vn]
-match = -221.4%%
-title = Màn chụp tự bung đỉnh vuông, giá xưởng, hàng việt nam ...
-url = https://tiki.vn/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-mung-tu-bung-cao-cap-p170076693.html?spid=175465922
+match = -207.1%%
+title = Màn chụp tự bung chống muỗi tốt ( 1,8 x 2m ) giao mầu ...
+url = https://tiki.vn/man-chup-tu-bung-chong-muoi-tot-18-x-2m-giao-mau-ngau-nhien-p14069982.html?spid=48457618
 
 [manthutrang.com]
-match = -200.0%%
-title = MÀN NGỦ CAO CẤP CHO GIA ĐÌNH & KHÁCH SẠN – MÀN ...
-url = https://manthutrang.com/
+match = -207.1%%
+title = Hướng dẫn phân biệt màn tự bung cao cấp và màn nhái ...
+url = https://manthutrang.com/blogs/news/huong-dan-phan-biet-man-tu-bung-cao-cap-va-man-nhai-gia-re
 
 [www.mantubung.com]
 match = -228.6%%
