--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-27 15:26:33
+lastsearch = 2024-07-27 16:28:16
 
 [www.bible.com]
-match = -100.0%%
-title = MATHAIA 20 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/MAT.20.MIZCLBSI
+match = -64.7%%
+title = Matyu 20 | TPIPNG Bible | YouVersion
+url = https://www.bible.com/bible/3481/MAT.20.TPIPNG
 
 [mizobibleblog.wordpress.com]
 match = -111.8%%
@@ -17,9 +17,9 @@ title = Exodus 1-40 - Mizo BIBle - WordPress.com
 url = https://mizobibleblog.wordpress.com/2017/02/24/exodus-1-40/
 
 [www.biblegateway.com]
-match = -82.4%%
-title = John 20:22 New International Version
-url = https://www.biblegateway.com/passage/?search=John 20:22&version=NIV
+match = -147.1%%
+title = Matthew 20:22-23 NIV - “You don't know what you are
+url = https://www.biblegateway.com/passage/?search=Matthew 20:22-23&version=NIV
 
 [mungchup.com]
 match = -100.0%%
