--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-27 13:47:28
+lastsearch = 2024-07-27 16:22:23
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -132,9 +132,9 @@ title = Wild Rift: Welcome to League of Legends
 url = https://wildrift.leagueoflegends.com/en-us/
 
 [books.google.com]
-match = -135.0%%
-title = The Japan Daily Mail - Page 194 - Google Books Result
-url = https://books.google.com/books?id=63Q9AQAAMAAJ&pg=RA1-PA194&lpg=RA1-PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=-belXmxNfT&sig=ACfU3U3FadJ3KanAyJbtPvrzSb_17Vkghw&hl=en&sa=X&ved=2ahUKEwiA-q-C5KuHAxW2FFkFHZEtAywQ6AF6BAgeEAM
+match = -140.0%%
+title = 1968 Annual Supplement - Page 1252 - Google Books Result
+url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+12&source=bl&ots=P-88cXhaeb&sig=ACfU3U1mGr-GEluksYwKyS5NNk-C7aCMow&hl=en&sa=X&ved=2ahUKEwjTh_3S8saHAxVYL0QIHZIxDp4Q6AF6BAgpEAM
 
 [thehill.com]
 match = -105.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -160.0%%
-title = (Olympics) Confusion reigns after chaotic finish in short ...
-url = https://en.yna.co.kr/view/AEN20180213013100315
+match = -115.0%%
+title = PM calls off press meeting amid clash over THAAD ...
+url = https://en.yna.co.kr/view/AEN20170907001800315
 
 [www.vlr.gg]
 match = 5.6%%
