--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-07-27 12:26:53
+lastsearch = 2024-07-27 17:19:46
 
 [shopee.vn]
 match = 8.8%%
@@ -24,7 +24,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demxanh.com]
 match = 14.7%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOopKhjqs7SIPoBrGuy6UIFkmLDzFZ_cVaeW3LgkJt6rdmGnIu9aP
 
 [giadunganhvan.vn]
 match = 48.0%%
@@ -84,7 +84,7 @@ url = https://tiki.vn/search?q=chiếu điều hòa cao su non
 [vtvhyundai.vn]
 match = 14.7%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOoqOdna3OqCmxnstRFM4z8fnX5UYrOoIDXngf28DRlYjR78xjmlI
 
 [ru9.vn]
 match = 8.8%%
@@ -119,7 +119,7 @@ url = https://linhkienlammusic.com/chieu-dieu-hoa-cao-su-non-tang-kem-goi-cho-be
 [www.lazada.vn]
 match = -5.9%%
 title = Chiếu điều hòa cao su non 3D, Chiếu điều hoà tặng kèm 2 ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-3d-chieu-dieu-hoa-tang-kem-2-vo-goi-dung-cho-mua-he-thoang-mat-da-nang-i2213525438.html
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-3d-chieu-dieu-hoa-tang-kem-2-vo-goi-dung-cho-mua-he-thoang-mat-da-nang-i2213525438.html?srsltid=AfmBOooz5XuVtOe8yrmS7oO_vwBJXKFbNp518gEYIg9tStWaN_xUenN0
 
 [www.youtube.com]
 match = -5.9%%
