--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-27 13:56:57
+lastsearch = 2024-07-27 17:24:38
 
 [vinatools.com]
 match = -206.7%%
@@ -157,9 +157,9 @@ title = Bò Né 2 Chị Em - Đường D2 ở TP. HCM
 url = https://www.foody.vn/ho-chi-minh/bo-ne-2-chi-em-duong-d-2
 
 [www.youtube.com]
-match = -233.3%%
-title = Destiny 2 - HE’S BACK! Exiled Character Returns With A ...
-url = https://www.youtube.com/watch?v=6okaeaDT6FE
+match = -180.0%%
+title = REHEARSAL | RISE AND SHINE | ELITE CHAMPIONS 2024
+url = https://www.youtube.com/watch?v=QDZ8BPEO8Ko
 
 [quangharvest.com]
 match = -186.7%%
